--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Text Formatting</title>
 </head>
 <body>
+<p><h1>Title</h1> 
+<h2>subtitle</h2></p>
 
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
   Text Formatting in HTML
@@ -17,7 +19,7 @@
   Chapter One
 
   <!-- Test 4: Wrap the following two text blocks in separate `p` tags -->
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+  <p><h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
   incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
   nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
   Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
@@ -36,7 +38,7 @@
   nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex
   ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea
   voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem
-  eum fugiat quo voluptas nulla pariatur?
+  eum fugiat quo voluptas nulla pariatur?</h3></p>
 
 
 </body>
